<resources>
    <string name="app_name">heart_rate_app</string>
    <string name="disconnect">disconnect</string>
    <string name="connect">connect</string>
    <string name="history">history</string>
    <string name="start">start</string>
    <string name="bpm">BPM</string>
    <string name="pulse_interval">Pulse Interval</string>
    <string name="status">Status</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="scan">scan</string>
    <string name="pired">pired</string>
    <string name="enter_a_note">Add a note</string>
    <string name="editsave">editsave</string>
    <string name="bpmaverage">bpmaverage</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="stop">stop</string>
</resources>
