<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtBpmAverage"
        android:layout_width="124dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/bpmaverage"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="410dp"
        android:layout_height="478dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSave"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txtHistory"
            android:layout_width="match_parent"
            android:layout_height="512dp"
            android:text="@string/textview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"
            app:layout_constraintVertical_bias="1.0" />
    </ScrollView>

    <TextView
        android:id="@+id/txtNote"
        android:layout_width="125dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/enter_a_note"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBpmAverage" />

    <EditText
        android:id="@+id/edtSave"
        android:layout_width="264dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNote" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="80dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNote" />
</androidx.constraintlayout.widget.ConstraintLayout>